<resources>
    <string name="app_name">Not so cloudy</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="msg_no_permission">No permission to get location</string>
    <string name="msg_need_permission">We need permission to access location</string>
    <string name="msg_explain_permission">We need to permission to get your location</string>
    <string name="error_something_happen">Something happened</string>
    <string name="error_no_service">No service found, can\'t display</string>
    <string name="api_key">AIzaSyB-eqraNZjGKxmvXWXnRBInCVd5DYG6fkQ</string>
    <string name="msg_no_services">No service found</string>
    <string name="action_setting">Settings</string>
    <string name="title_hourly_forecast">Hourly Forecast</string>
    <string name="title_daily_forecast">Daily Forecast</string>
    <string name="txt_today">Today</string>
    <string name="txt_tomorrow">Tomorrow</string>
    <string name="title_last_update">Last update:\u0020</string>
    <string name="title_feel">Real feel:\u0020</string>
    <string name="symbol_celsius">\u2103</string>
    <string name="title_sun_moon">Sun and Moon</string>
    <string name="title_sunrise">Sunrise Time</string>
    <string name="title_sunset">Sunset Time</string>
    <string name="title_details">Details</string>
    <string name="title_visibility">Visibility</string>
    <string name="title_pressure">Pressure</string>
    <string name="title_precipitation">Precipitation</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_wind_speed">Wind Speed</string>
    <string name="title_wind_bearing">Wind Bearing</string>
    <string name="measure_km">Km</string>
    <string name="measure_ha">Ha</string>
    <string name="speed_kmph">Km/h</string>
    <string name="title_wind">Wind</string>
    <string name="bearing_immobile">Immobile</string>
    <string name="bearing_north">North</string>
    <string name="bearing_north_east">North East</string>
    <string name="bearing_east">East</string>
    <string name="bearing_south_east">South East</string>
    <string name="bearing_south">South</string>
    <string name="bearing_south_west">South West</string>
    <string name="bearing_west">West</string>
    <string name="bearing_north_west">North West</string>
    <string name="title_date">Date:\u0020</string>
    <string name="measure_kph_km">Km/h, Km</string>
    <string name="measure_mph_mile">Mph, mile</string>
    <string name="symbol_fahrenheit">\u2109</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_measure">Measure</string>
    <string name="title_settings">Settings</string>
    <string name="measure_mile">Miles</string>
    <string name="speed_mph">Mph</string>
    <string name="title_splash">Not So Cloudy</string>
    <string name="msg_turn_on_internet">Please turn on internet and try again</string>
    <string name="action_picker">Place Picker</string>
    <string name="title_delete">Delete</string>
    <string name="msg_cant_delete">Can not delete this place</string>
    <string name="msg_no_information">No information</string>
    <string name="msg_delete_after">This place will be deleted after refresh app</string>
    <string name="msg_turn_on_location">Please turn on location and try again</string>
</resources>
